fix(style): see flickering in tooltip overflow dom

--- a/src/components/markdown-viewer/index.less
+++ b/src/components/markdown-viewer/index.less
@@ -78,6 +78,7 @@
   table {
     width: 100%;
     margin-bottom: 1.2em;
+    font-size: var(--font-size-small);
 
     th {
       font-weight: var(--font-weight-bold);
